# momento

./: .env.example  LICENSE  README.md  pyproject.toml
.cursor/rules/: documentation-guidelines.mdc
src/: main.py
src/auth/: auth-routes.md  dependencies.py  email.py  jwt.py  models.py  routes.py
src/common/: logging.py
src/config/: settings.py
src/database/: __init__.py  connection.py  queries.py
src/exceptions/: handlers.py
src/graph/: __init__.py  dependencies.py  models.py  routers.py  schemas.py
src/graph/pipeline/: extraction_runner.py  observers.py
src/graph/providers/: anthropic_provider.py  base.py  local_provider.py  ollama_provider.py  openai_provider.py  registry.py
src/graph/repositories/: entity_repository.py  relation_repository.py
src/graph/services/: entity_service.py  entry_ingestion.py  search_service.py
src/graph/tasks/: background.py
src/graph/use_cases/: ingest_entry.py  semantic_search.py
src/integrations/mcp/: routers.py  schemas.py  services.py
tests/graph/: test_local_provider.py
